# WEB_Home_Work_7

./: alembic.ini  config.ini  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 29ce8e75ec0b_init.py  65b50932848d_init.py  ccfb63e2234c_init.py  d69232d83cea_init.py
