alembic revision --autogenerate -m 'Init'[tool.poetry]
name = "web-7"
version = "0.1.0"
description = ""
authors = ["IamSerJanGO <130689026+IamSerJanGO@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
